--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -368,25 +368,17 @@ h4 {
 table,
 th,
 td {
+
     border: 1px solid black;
     background-color: #fafafa;
-    width: 80%;
-    height: 20%;
+    width: 50%;
+    height: 40%;
     columns: 4;
+    column-width: 4;
 }
 
 /*grid views and grid rows*/
-.grid-item1 {
 
-    grid-row: auto;
-    grid-template-columns: 2;
-}
-
-.grid-item2 {
-
-    grid-row: auto;
-    grid-template-columns: 2;
-}
 
 #contact {
     height: 600px;
@@ -413,7 +405,14 @@ input {
 
 #events {
     border: 1px solid black;
-    width: auto;
+    width: 100%;
+    position: relative;
+
+}
+
+#events2 {
+    border: 1px solid black;
+    width: 100%;
     position: relative;
 
 }
