--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,12 +287,14 @@ h4 {
     padding-top: 50px;
     padding-bottom: 50px;
     padding-right: 20px;
-    margin-bottom: 30px;
+    max-height: 40px;
 }
 
 .menu-button::before {
     content: '';
     margin-top: -8px;
+    margin-bottom: 10px;
+    margin-right: 10px;
 }
 
 .menu-button::after {
@@ -333,18 +335,18 @@ h4 {
             color: aqua;
             flex-direction: row;
             font-size: small;
-            margin-left: 0;
-            margin-right: 0;
-            margin-top: 0;
+            margin-right: 10px;
+            margin-top: 10px;
             margin-bottom: 10px;
             padding-top: 0;
-            padding-left: 5px;
             padding-right: 5px;
             padding-bottom: 20px;
             max-width: 30%;
             width: 10%;
             height: 10px;
-            position: sticky;
+            display: flex;
+            float: left;
+
 
         }
     }
@@ -356,15 +358,29 @@ h4 {
         }
     }
 
-    .menu {
-        position: absolute;
-        top: 0;
-        margin-top: 50px;
-        left: 0;
-        flex-direction: column;
-        width: 100%;
-        justify-content: center;
-        align-items: center;
+
+    @media (min-width: 320px) {
+
+        .menu-button {
+            color: red;
+            padding-bottom: 100px;
+
+        }
+    }
+
+
+    @media (min-width: 320px) {
+
+        #logo {
+            font-size: 180%;
+        }
+    }
+
+    .menu-button::after.menu-button::before {
+        margin-right: 20px;
+        margin-bottom: 15px;
+
+
     }
 
     #menu-toggle~.menu li {
